--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,26 +1,59 @@
 services:
- 
   db:
     image: postgres
     container_name: postgres
     restart: always
     environment:
       POSTGRES_PASSWORD: 1234
-    ports:
-      - "5432:5432"
     volumes:
       - pgdata:/var/lib/postgresql/data
-  app:
+    deploy:
+      resources:
+        limits:
+          cpus: '0.2'
+          memory: 150M
+  api01:
     image: node:20-alpine3.18
     environment:
       - POSTGRES_HOST=postgres
-    container_name: app
+    container_name: api01
     build:
       dockerfile: ./Dockerfile
-    ports:
-      - "9999:9999"
     depends_on:
       - db
+    deploy:
+      resources:
+        limits:
+          cpus: '0.4'
+          memory: 200M
+  api02:
+    image: node:20-alpine3.18
+    environment:
+      - POSTGRES_HOST=postgres
+    container_name: api02
+    build:
+      dockerfile: ./Dockerfile
+    depends_on:
+      - db
+    deploy:
+      resources:
+        limits:
+          cpus: '0.4'
+          memory: 200M
+  nginx:
+    image: nginx:latest
+    volumes:
+      - ./nginx.conf:/etc/nginx/nginx.conf:ro
+    depends_on:
+      - api01
+      - api02
+    ports:
+      - "9999:9999"
+    deploy:
+      resources:
+        limits:
+          cpus: '0.1'
+          memory: 100M
  
 volumes:
   pgdata:
